--- a/app/public/sass/_variables.scss
+++ b/app/public/sass/_variables.scss
@@ -23,7 +23,8 @@ $main-margin: 10px;
 
 $control-button-font-size: .6em;
 
-$movy-grid-item-width : 185px;
+$movy-grid-item-width: 185px;
+$movy-grid-item-poster-min-height: 282px;
 
 $movy-search-result-item-border-size: 1px;
 $movy-search-result-item-padding-horizontal: 5px;
